--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Dictionary App</title>
     <link rel="shortcut icon" href="image.png" type="image/x-icon">
     <!-- css file -->
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="css\style.css" />
     <!-- Bootstrap CDN -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <!-- FONT Awesome CDN -->
@@ -20,7 +20,7 @@
   <body>
     <div class="container" id="container">
       <video muted autoplay loop
-        src="7918375-hd_1920_1080_30fps.mp4"></video>
+        src="video\7918375-hd_1920_1080_30fps.mp4"></video>
    
     <!-- Container -->
     <div class="container mt-3 bg-white rounded-5 bg-color" id="contaniers">
@@ -59,6 +59,6 @@
     </div>
 </div>
     <!-- js file -->
-    <script src="script.js"></script>
+    <script src="js\script.js"></script>
   </body>
 </html>
